<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="android.support.design.widget.bottomSheetBehavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:viewBindingIgnore="true">

    <LinearLayout
        android:id="@+id/linear_layout_curved_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:src="@drawable/ic_brush"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Кривая"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:src="@drawable/ic_diagonal_line"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Прямая линия"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_circle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:src="@drawable/ic_circle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bottom_sheet_dialog_shape_circle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_rectangle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:src="@drawable/ic_rectangle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bottom_sheet_dialog_shape_rectangle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_square"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:src="@drawable/ic_square"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bottom_sheet_dialog_shape_square"/>
    </LinearLayout>

</LinearLayout>